--- a/src/app/shop/checkout/success/success.component.html
+++ b/src/app/shop/checkout/success/success.component.html
@@ -42,7 +42,7 @@
                                 <li><span>Order Total:</span>
                                     {{ orderDetails[0].totalAmount | currency:productService?.Currency.currency:'symbol' }}
                                 </li>
-                                <li><span>Payment Method:</span> Credit Card (**3569)</li>
+                                <!-- <li><span>Payment Method:</span> Credit Card (**3569)</li> -->
                             </ul>
                         </div>
                         <div class="col-md-6 mb-3">
