--- a/src/app/shop/cart/cart.component.html
+++ b/src/app/shop/cart/cart.component.html
@@ -137,11 +137,11 @@
                             <span><b>{{TotalPieces}}</b></span>
                         </p>
                         <p class="d-flex justify-content-between">
-                            <span>Total MRP: </span>
+                            <span>Total Amount: </span>
                             <span><b>{{ Price | currency:productService?.Currency.currency:'symbol'}}</b></span>
                         </p>
                         <p class="d-flex justify-content-between">
-                            <span>Total Discounts on MRP: </span>
+                            <span>Total Discounts: </span>
                             <span><b>{{ Discount | currency:productService?.Currency.currency:'symbol'}}</b></span>
                         </p>
                         <hr>
