--- a/src/app/shared/footer/footer-one/footer-one.component.html
+++ b/src/app/shared/footer/footer-one/footer-one.component.html
@@ -40,7 +40,7 @@
 								<!-- <img [src]="themeLogo" alt="logo"> -->
 								<h4>VIKRAM CREATIONS PRIVATE LIMITED</h4>
 							</div>
-							<p>Established in the year 1999, Vikram Creations Pvt. Ltd, is a well known fashion house based
+							<p style="text-align: justify;">Established in the year 1999, Vikram Creations Pvt. Ltd, is a well known fashion house based
 								out of New
 								Delhi, India. The comapany is a renowned as a manufacturer, wholesaler, trader and supplier
 								of women
